# AtvSomativa-Devops

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: alertasDiscord.yml  cd.yml  ci.yml  testes-unitarios.yml
src/bmi_calc/: __init__.py  cli.py  core.py
tests/: test_core.py
